# arduino-project-template

./: .gitignore  Makefile.am  README.md  configure.ac  helper.sh
libraries/Pin/: Pin.cpp  Pin.h
sketches/PinTest/: PinTest.ino
src/: main.cpp
